--- a/PharmacyManagementSystemSolution/PharmacyManagementSystem/appsettings.json
+++ b/PharmacyManagementSystemSolution/PharmacyManagementSystem/appsettings.json
@@ -5,5 +5,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "defaultConnection": "Data Source=GRMCBX3;Integrated Security=true;Initial Catalog=dbPharmacy;"
+  },
+  "TokenKey": {
+    "JWT": "This is the dummy key which has to be a bit long for the 512. which should be even more longer for the passing"
+  },
   "AllowedHosts": "*"
 }
