--- a/PharmacyManagementSystemSolution/PharmacyManagementSystem/PharmacyManagementSystem.csproj
+++ b/PharmacyManagementSystemSolution/PharmacyManagementSystem/PharmacyManagementSystem.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="log4net" Version="2.0.17" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.30" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Abstractions" Version="2.2.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.30" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.30">
       <PrivateAssets>all</PrivateAssets>
