Docker setup init

--- a/PharmacyManagementSystemSolution/PharmacyManagementSystem/appsettings.json
+++ b/PharmacyManagementSystemSolution/PharmacyManagementSystem/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "defaultConnection": "Data Source=GRMCBX3;Integrated Security=true;Initial Catalog=dbPharmacy;"
+    "defaultConnection": "Server=db;Database=dbPharmacy;User ID=sa;Password=S3cur3P@ssW0rd!;TrustServerCertificate=False;Integrated Security=False;MultipleActiveResultSets=true"
   },
   "TokenKey": {
     "JWT": "This is the dummy key which has to be a bit long for the 512. which should be even more longer for the passing"
